# twitter-syndication

./: Cargo.toml
src/: fetch.rs  lib.rs  tweet.rs  utils.rs
