[package]
name = "twitter-syndication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["json", "gzip", "deflate", "brotli"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.15"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
